--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "framer-motion": "^6",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "eslint": "8.15.0",
